# photon

./: .gitignore  Makefile  pyproject.toml
scripts/: duplicate.py
src/photon/: core.py  dedup.py  dedupe.py  detection.py  io.py  main.py  model.py  pipeline.py  selection.py
