[project]
name = "photon"
version = "0.1.0"
description = "Deduplication of images"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imagededup>=0.3.3.post2",
    "pillow>=12.2.0",
    "pillow-heif>=1.3.0",
]

[project.scripts]
photon-dedup = "photon.main:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath="src"

[tool.black]
target-version = ["py313"]
line-length = 100

[dependency-groups]
dev = [
    "black>=26.5.1",
    "mypy>=2.1.0",
    "pylint>=4.0.5",
]
